--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="subtraction">Subtraction</string>
     <string name="main_menu">Main Menu</string>
     <string name="congratulations_you_have_a_new_personal_best">Congratulations, you have a new personal best!</string>
+    <string name="mode_button">mode</string>
 </resources>
